<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    android:layout_marginTop="10dp"
    android:fillViewport="true">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/darker_gray"
        android:text="@string/user_card"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="10dp"
        android:text="@string/einheit_1"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editTextE1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/name"
        android:importantForAutofill="no" />

    <View style="@style/Divider" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/einheit_2"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editTextE2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/name2"
        android:importantForAutofill="no" />

    <View style="@style/Divider" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/gleichung"
        android:textSize="14sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/umfaktor1"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editFaktor1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:digits="0123456789.-"
        android:ems="10"
        android:inputType="numberDecimal"
        android:importantForAutofill="no" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/darker_gray"
        android:text="@string/steuer"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="10dp"
        android:text="@string/einfuhrumsatzsteuer"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editTextSt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:digits="0123456789.-"
        android:ems="10"
        android:inputType="numberDecimal"
        android:importantForAutofill="no" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@android:color/darker_gray"
        android:text="@string/einstellung"
        android:textSize="14sp"
        android:textStyle="bold" />

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/switch1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/easy_ansicht"
        android:textSize="18sp"
        android:visibility="gone" />

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/switch2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/internet"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp"
        android:text="@string/zugriff"
        android:textSize="14sp" />

    <View
        style="@style/Divider"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/save_and_close" />
</LinearLayout>
    </android.support.v4.widget.NestedScrollView>
