<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="uscartools.USTravelConverter.MainActivity$SectionsPagerAdapter">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/us_import"
            android:textSize="24sp"
            android:textStyle="bold|italic"
            android:shadowColor="@android:color/darker_gray"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="3"
            android:textColor="@android:color/background_dark"/>


    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="165dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/pic_border_fs8_fs8"
        android:columnCount="3"
        android:paddingTop="0dp"
        android:rowCount="3">


        <TextView

            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginLeft="2dp"
            android:layout_marginStart="2dp"


            android:layout_marginTop="7dp"
            android:layout_row="2"
            android:ems="4"
            android:shadowColor="@android:color/background_dark"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="3"
            android:text="@string/summe"
            android:textColor="@android:color/background_light"
            android:textSize="17sp"
            android:textStyle="italic" />

        <TextView

            android:id="@+id/textViewSumme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginEnd="5dp"


            android:layout_marginRight="5dp"
            android:layout_marginTop="7dp"
            android:layout_row="2"
            android:ems="5"
            android:gravity="end"
            android:paddingRight="5dp"
            android:shadowColor="@android:color/background_dark"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="3"
            android:textColor="@android:color/background_light"
            android:textSize="17sp"
            android:textStyle="italic" />

        <TextView

            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="7dp"
            android:layout_row="2"
            android:ems="5"
            android:shadowColor="@android:color/background_dark"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="3"
            android:textColor="@android:color/background_light"
            android:textSize="17sp"
            android:textStyle="italic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginLeft="2dp"

            android:layout_marginStart="2dp"
            android:layout_row="0"
            android:shadowColor="@android:color/background_dark"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="3"
            android:text="@string/rechnung"
            android:textColor="@android:color/background_light"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editText"
            style="@style/MyEditTextStyle"
            android:layout_column="1"
            android:layout_row="0"
            android:ems="4"
            android:maxLines="1"
            android:text=""
            android:textColor="@android:color/background_light"
            android:textSize="32sp"
            android:importantForAutofill="no" />

        <TextView

            android:id="@+id/textRECHN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="0"
            android:shadowColor="@android:color/background_dark"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="3"
            android:text="@string/usdollar"
            android:textColor="@android:color/background_light"
            android:textSize="18sp" />

        <TextView

            android:layout_column="0"
            android:layout_marginLeft="2dp"
            android:layout_marginStart="2dp"
            android:layout_row="1"
            android:ems="4"
            android:shadowColor="@android:color/background_dark"
            android:shadowDx="2"


            android:shadowDy="2"
            android:shadowRadius="3"
            android:text="@string/versand"
            android:textColor="@android:color/background_light"
            android:textSize="20sp" />


        <EditText
            android:id="@+id/editText2"

            style="@style/MyEditTextStyle"
            android:layout_column="1"
            android:layout_row="1"

            android:ems="4"

            android:maxLines="1"
            android:text=""
            android:textColor="@android:color/background_light"
            android:textSize="32sp"
            android:importantForAutofill="no" />

        <TextView

            android:id="@+id/textVERS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_row="1"
            android:shadowColor="@android:color/background_dark"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="3"
            android:text="@string/usdollar"
            android:textColor="@android:color/background_light"
            android:textSize="18sp" />


    </GridLayout>

        <!-- <View style="@style/Divider" /> -->

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/gridLayout"
        android:layout_marginBottom="120dp"

        android:layout_marginTop="5dp"
        android:columnCount="3"
        android:rowCount="5">


        <TextView

            android:id="@+id/textCurr3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="3"
            android:shadowColor="@android:color/darker_gray"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="3"
            android:text="@string/euro"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView46"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="3"
            android:ems="5"

            android:maxLines="1"
            android:text=""
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="3"
            android:paddingRight="10dp"
            android:shadowColor="@android:color/darker_gray"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="3"
            android:text="@string/summe_abgaben"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView

            android:id="@+id/textCurr4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="4"
            android:shadowColor="@android:color/darker_gray"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="3"
            android:text="@string/euro"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView32"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="2"
            android:ems="5"
            android:maxLines="1"
            android:text=""

            android:textColor="@android:color/holo_red_light"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="2"
            android:ems="5"
            android:shadowColor="@android:color/darker_gray"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="3"
            android:text="@string/eust"
            android:textColor="@android:color/holo_red_light"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="1"
            android:ems="5"
            android:shadowColor="@android:color/darker_gray"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="3"
            android:text="@string/zollbetrag"
            android:textColor="@android:color/holo_red_light"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="1"
            android:ems="5"
            android:maxLines="1"

            android:text=""
            android:textColor="@android:color/holo_red_light"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView

            android:id="@+id/textCurr1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="1"
            android:shadowColor="@android:color/darker_gray"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="3"
            android:text="@string/euro"
            android:textColor="@android:color/holo_red_light"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="4"
            android:shadowColor="@android:color/darker_gray"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="3"
            android:text="@string/gesamtbetrag"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="4"
            android:ems="5"
            android:maxLines="1"

            android:text=""
            android:textColor="@android:color/holo_green_dark"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView

            android:id="@+id/textCurr2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="2"
            android:shadowColor="@android:color/darker_gray"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="3"
            android:text="@string/euro"
            android:textColor="@android:color/holo_red_light"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="0"
            android:ems="4"
            android:shadowColor="@android:color/darker_gray"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="3"
            android:text="@string/zollsatz2"
            android:textColor="@android:color/background_dark"
            android:textSize="22sp" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="0"
            android:entries="@array/zollsatz"

            android:textSize="20sp" />

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="0"
            android:entries="@array/currency"

            android:textSize="20sp" />


    </GridLayout>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="340dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editText7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:digits="0123456789."
            android:ems="5"
            android:inputType="phone|numberDecimal"
            android:maxLines="1"
            android:text=""
            android:textSize="20sp"
            android:importantForAutofill="no" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:ems="3"
            android:text="@string/usdollar"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editText8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:digits="0123456789."
            android:ems="5"
            android:inputType="phone|numberDecimal"
            android:maxLines="1"
            android:text=""
            android:textSize="20sp"
            android:importantForAutofill="no" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/arrEuro"
            android:textSize="18sp" />


    </LinearLayout>

        <ImageView
            android:layout_width="50sp"
            android:layout_height="50sp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:contentDescription="zollschild"
            app:srcCompat="@drawable/zollsymbol" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/linearLayout"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="5"
                android:text="US Dollar / €"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="4"
                android:maxLines="1"
                android:text=""
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:maxLines="1"
                android:text=""
                android:textSize="15sp"
                android:textStyle="italic" />

            <Button
                android:id="@+id/but_refresh"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/baseline_refresh_black_18dp"
                android:visibility="visible" />
        </LinearLayout>


    </RelativeLayout>


</android.support.v4.widget.NestedScrollView>
